--- a/src/containers/Home/Home.module.css
+++ b/src/containers/Home/Home.module.css
@@ -1,9 +1,72 @@
 .Home{
-    background-image: linear-gradient(45deg, rgba(0, 255, 0, 0.4), rgba(128, 0, 0, 0.5)), url('../../resources/img/home_bgc.jpg');
+    background-image: linear-gradient(45deg, rgba(0, 50, 0, 0.7), rgba(30, 0, 0, 0.5)), url('../../resources/img/home_bgc.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
     min-height: 100vh;
 }
+
+.Home h2{
+    width: 100%;
+    font-size: 64px;
+    letter-spacing: 1px;
+    background-color: rgba(0, 0, 0, 0.2);
+    font-weight: normal;
+}
+
+.paragraph{
+    margin: 50px auto;
+    width: 50%;
+    font-size: 24px;
+    letter-spacing: 1px;
+    line-height: 150%;
+}
+
+.general{
+    margin-top: 100px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    font-size: 22px;
+    line-height: 150%;
+    letter-spacing: 1px;
+}
+
+.select{
+    margin: 0 100px;
+    width: 15%;
+    text-align: left;
+    min-height: 300px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+.projectsButton, .stayButton{
+    margin: 0;
+    text-align: center;
+    width: 200px;
+    border-radius: 50vh;
+    padding: 0 15px;
+    font-weight: 600;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.projectsButton{
+    background-image: linear-gradient(45deg, rgb(0, 70, 255), rgba(0, 100, 255));
+    box-shadow: 0px 0px 2px 2px rgb(0, 70, 255);
+}
+
+.stayButton{
+    background-image: linear-gradient(45deg, rgb(155, 20, 0), rgb(155, 40, 0));
+    box-shadow: 0px 0px 2px 2px rgb(155, 40, 0);
+}
+
+
