--- a/src/containers/Home/Home.module.css
+++ b/src/containers/Home/Home.module.css
@@ -40,12 +40,13 @@
 }
 
 .select{
-    margin: 0 100px;
-    width: 15%;
-    text-align: left;
+    font-size: 20px;
+    margin: 0 50px;
+    width: 25%;
     min-height: 300px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     flex-direction: column;
 }
 .projectsButton, .stayButton{
@@ -54,7 +55,6 @@
     width: 200px;
     border-radius: 50vh;
     padding: 0 15px;
-    font-weight: 600;
     font-size: 18px;
     cursor: pointer;
 }
@@ -67,6 +67,45 @@
 .stayButton{
     background-image: linear-gradient(45deg, rgb(155, 20, 0), rgb(155, 40, 0));
     box-shadow: 0px 0px 2px 2px rgb(155, 40, 0);
+}
+
+@media (max-width: 1150px){
+    .Home h2{
+        font-size: 50px;
+    }
+
+    .paragraph{
+        width: 80%;
+        font-size: 22px;
+    }
+    .select{
+        margin: 0 20px;
+        font-size: 20px;
+        width: 45%;
+    }
+
+    .projectsButton, .stayButton{
+        width: 160px;
+        font-weight: normal; 
+    }
+}
+
+@media (max-width: 850px){
+    .Home h2{
+        font-size: 40px;
+    }
+}
+
+@media (max-width: 600px){
+    .select{
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 550px){
+    .paragraph{
+        margin: 20px auto;
+    }
 }
 
 
