--- a/src/containers/Navigation/Navigation.module.css
+++ b/src/containers/Navigation/Navigation.module.css
@@ -9,7 +9,7 @@
 }
 
 .NavLink{
-    padding: 10px 20px;
+    padding: 0px 20px;
     text-decoration: none;
     font-size: 22px;
     letter-spacing: 1px;
@@ -19,4 +19,11 @@
 
 .active{
     color: gray;
+}
+
+@media (max-width: 850px){
+    .NavLink{
+        padding: 0 10px;
+        font-size: 16px;
+    }
 }
