--- a/src/containers/Home/Home.module.css
+++ b/src/containers/Home/Home.module.css
@@ -40,16 +40,17 @@
 }
 
 .select{
-    font-size: 20px;
-    margin: 0 50px;
+    font-size: 22px;
     width: 25%;
-    min-height: 300px;
+    min-height: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
 }
+
 .projectsButton, .stayButton{
+    position: relative;
     margin: 0;
     text-align: center;
     width: 200px;
@@ -57,6 +58,14 @@
     padding: 0 15px;
     font-size: 18px;
     cursor: pointer;
+    overflow: hidden;
+    transition: .4s ease;
+}
+
+.projectsButton p, .stayButton p{
+    position: relative;
+    z-index: 10;
+    transition: .4s ease;
 }
 
 .projectsButton{
@@ -68,6 +77,26 @@
     background-image: linear-gradient(45deg, rgb(155, 20, 0), rgb(155, 40, 0));
     box-shadow: 0px 0px 2px 2px rgb(155, 40, 0);
 }
+
+
+.projectsButton::before, .stayButton::before{
+    content: '';
+    position: absolute;
+    left: -150%;
+    width: 150%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    transition: .4s ease;
+}
+
+.projectsButton:hover::before, .stayButton:hover::before{
+    left: 0%;
+}
+
+.projectsButton:hover, .stayButton:hover{
+    box-shadow: 0px 0px 3px 3px white;
+}
+
 
 @media (max-width: 1150px){
     .Home h2{
