--- a/src/containers/Skills/Skills.module.css
+++ b/src/containers/Skills/Skills.module.css
@@ -9,6 +9,8 @@
 
 
 .overlay{
+    position: relative;
+    z-index: 10;
     background-color: rgb(0, 119, 181);
     height: 15vh;
     width: 100%;
