--- a/src/containers/Skills/summary/content/Frontend/Frontend.module.css
+++ b/src/containers/Skills/summary/content/Frontend/Frontend.module.css
@@ -3,6 +3,14 @@
     box-shadow: 0px -24px 1px -24px black
 }
 
+.wrapper h2{
+    margin: 30px auto;
+    line-height: 150%;
+    letter-spacing: 1px;
+    font-size: 32px;
+    width: 80%;
+}
+
 .abilities{
     display: flex;
     justify-content: center;
@@ -26,7 +34,8 @@
     justify-content: space-around;
     align-items: center;
     width: 200px;
-    background-color: gray;
+    background-color: lightgray;
+    box-shadow: 4px 6px 6px 2px gray;
     margin: 10px;
     padding: 15px;
 }
