--- a/src/components/intro/Projects/projects.module.css
+++ b/src/components/intro/Projects/projects.module.css
@@ -12,6 +12,7 @@
 .buttonWrapper{
     margin: auto;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
@@ -78,4 +79,41 @@
 
 .projectsButton:hover{
     box-shadow: 0px 0px 6px 3px gray;
+}
+
+@media (max-width: 750px){
+    .projectsButton{
+        margin-right: 6px;
+    }
+
+    .goForward{
+        margin-left: 6px;
+    }
+}
+@media (max-width: 620px){
+    .Proj h3{
+        font-size: 24px;
+        margin: 0 auto 70px auto;
+    }
+
+    .projectsButton, .goForward{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 16px;
+    }
+
+    .projectsButton{
+        margin-right: 0px;
+        margin-bottom: 10px;
+    }
+
+    .goForward{
+        margin-left: 0px;
+        margin-bottom: 10px;
+    }
+
+    .goForward p{
+        font-size: 16px;
+    }
 }
