--- a/src/containers/Navigation/Navigation.module.css
+++ b/src/containers/Navigation/Navigation.module.css
@@ -9,21 +9,40 @@
 }
 
 .NavLink{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 50px;
+    border-radius: 50vh;
     padding: 0px 20px;
     text-decoration: none;
     font-size: 22px;
     letter-spacing: 1px;
     color: white;
     position: relative;
+    transition: .4s linear;
 }
 
 .active{
-    color: gray;
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
 @media (max-width: 850px){
     .NavLink{
         padding: 0 10px;
         font-size: 16px;
+    }
+}
+
+@media (max-width: 500px){
+    .list{
+        top: 1%;
+        flex-direction: column;
+    }
+
+    .NavLink{
+        min-height: 0;
+        padding: 8px 10px;
+        font-size: 22px;
     }
 }
