--- a/src/containers/Skills/Skills.module.css
+++ b/src/containers/Skills/Skills.module.css
@@ -12,6 +12,12 @@
     position: relative;
     z-index: 10;
     background-color: rgb(0, 119, 181);
-    height: 15vh;
+    height: 150px;
     width: 100%;
+}
+
+@media (max-width: 500px){
+    .overlay{
+        height: 220px;
+    }
 }
