--- a/src/containers/Skills/summary/Hobbies/hobbies.module.css
+++ b/src/containers/Skills/summary/Hobbies/hobbies.module.css
@@ -2,6 +2,14 @@
     padding: 150px 0;
 }
 
+.hobbies h2{
+    margin: auto;
+    width: 80%;
+    font-size: 36px;
+    font-weight: 600;
+}
+
+
 .hobbies ul{
     display: flex;
     justify-content: center;
@@ -22,4 +30,19 @@
     box-shadow: 4px 6px 6px 2px gray;
     margin: 10px;
     padding: 15px 25px;
+}
+
+@media (max-width: 600px){
+    .hobbies{
+        padding: 100px 0;
+    }
+
+    .hobbies h2{
+        margin: auto;
+        width: 90%;
+    }
+
+    .hobbies ul li{
+        padding: 12px;
+    }
 }
