--- a/src/containers/Skills/summary/content/Extra/Extra.module.css
+++ b/src/containers/Skills/summary/content/Extra/Extra.module.css
@@ -7,6 +7,17 @@
     margin: 30px auto;
     line-height: 150%;
     letter-spacing: 1px;
-    font-size: 32px;
+    font-size: 36px;
+    font-weight: 600;
     width: 80%;
+}
+
+@media (max-width: 600px){
+    .outside{
+        padding: 50px 0 100px 0;
+    }
+    .outside h2{
+        font-size: 28px;
+        width: 90%;
+    }
 }
