--- a/src/containers/Navigation/Navigation.module.css
+++ b/src/containers/Navigation/Navigation.module.css
@@ -1,10 +1,10 @@
 .list{
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     width: 100%;
+    height: 150px;
     position: absolute;
-    top: 5%;
     z-index: 15;
 }
 
@@ -29,8 +29,9 @@
 
 @media (max-width: 500px){
     .list{
-        top: 1%;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
     .NavLink{
