--- a/src/components/intro/Projects/projects.module.css
+++ b/src/components/intro/Projects/projects.module.css
@@ -1,5 +1,8 @@
 .Proj{
     margin-top: 50px;
+    position: relative;
+    opacity: 0;
+    transform: translateY(0%);
 }
 .Proj h3{
     font-weight: normal;
