--- a/src/containers/Navigation/Navigation.module.css
+++ b/src/containers/Navigation/Navigation.module.css
@@ -1,6 +1,6 @@
 .list{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     width: 100%;
     height: 150px;
