--- a/src/containers/Skills/summary/content/Frontend/Frontend.module.css
+++ b/src/containers/Skills/summary/content/Frontend/Frontend.module.css
@@ -1,6 +1,7 @@
 .wrapper{
     padding-top: 150px;
-    box-shadow: 0px -24px 1px -24px black
+    box-shadow: 0px -24px 1px -24px black;
+    opacity: 0;
 }
 
 .wrapper h2{
