--- a/src/containers/Home/Home.module.css
+++ b/src/containers/Home/Home.module.css
@@ -9,6 +9,7 @@
     justify-content: center;
     color: white;
     min-height: 100vh;
+    overflow: hidden;
 }
 
 .Home h2{
@@ -49,7 +50,7 @@
     flex-direction: column;
 }
 
-.projectsButton, .stayButton{
+.stayButton{
     position: relative;
     margin: 0;
     text-align: center;
@@ -62,15 +63,10 @@
     transition: .4s ease;
 }
 
-.projectsButton p, .stayButton p{
+.stayButton p{
     position: relative;
     z-index: 10;
     transition: .4s ease;
-}
-
-.projectsButton{
-    background-image: linear-gradient(45deg, rgb(0, 70, 255), rgba(0, 100, 255));
-    box-shadow: 0px 0px 2px 2px rgb(0, 70, 255);
 }
 
 .stayButton{
@@ -79,7 +75,7 @@
 }
 
 
-.projectsButton::before, .stayButton::before{
+.stayButton::before{
     content: '';
     position: absolute;
     left: -150%;
@@ -89,11 +85,11 @@
     transition: .4s ease;
 }
 
-.projectsButton:hover::before, .stayButton:hover::before{
+.stayButton:hover::before{
     left: 0%;
 }
 
-.projectsButton:hover, .stayButton:hover{
+.stayButton:hover{
     box-shadow: 0px 0px 3px 3px white;
 }
 
@@ -113,7 +109,7 @@
         width: 45%;
     }
 
-    .projectsButton, .stayButton{
+    .stayButton{
         width: 160px;
         font-weight: normal; 
     }
@@ -121,7 +117,12 @@
 
 @media (max-width: 850px){
     .Home h2{
+        margin-top: 200px;
         font-size: 40px;
+    }
+
+    .stayButton{
+        margin-bottom: 200px;
     }
 }
 
