--- a/src/containers/Navigation/Navigation.module.css
+++ b/src/containers/Navigation/Navigation.module.css
@@ -27,6 +27,10 @@
     background-color: rgba(0, 0, 0, 0.3);
 }
 
+.NavLink:hover{
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
 @media (max-width: 500px){
     .list{
         flex-direction: column;
