--- a/src/containers/Skills/summary/content/Frontend/Frontend.module.css
+++ b/src/containers/Skills/summary/content/Frontend/Frontend.module.css
@@ -52,7 +52,8 @@
     }
 
     .abilities ul li{
-        width: 180px;
+        font-size: 18px;
+        width: 140px;
         padding: 8px;
     }
 
