--- a/src/containers/Hire/Summary/Summary.module.css
+++ b/src/containers/Hire/Summary/Summary.module.css
@@ -42,8 +42,7 @@
     margin: 50px auto 0 auto;
     padding: 0 15px;
     width: 100%;
-    border-top: 1px solid gray;
-    border-bottom: 1px solid gray;
+    box-shadow: 0px 3px 1px -2px black;
     cursor: pointer;
     transition: .4s ease;
     font-size: 24px;
