--- a/src/containers/Navigation/Navigation.module.css
+++ b/src/containers/Navigation/Navigation.module.css
@@ -1,11 +1,18 @@
-.list{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+.wrapper{
     width: 100%;
-    height: 150px;
     position: absolute;
     z-index: 15;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 150px;
 }
 
 .NavLink{
