--- a/src/containers/Skills/summary/content/Frontend/Frontend.module.css
+++ b/src/containers/Skills/summary/content/Frontend/Frontend.module.css
@@ -33,7 +33,7 @@
 .abilities ul li{
     display: flex;
     font-size: 22px;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     width: 200px;
     background-color: lightgray;
@@ -41,6 +41,16 @@
     margin: 10px;
     padding: 15px;
 }
+
+.abilities ul li i{
+    width: 50px;
+}
+
+.abilities ul li p{
+    text-align: center;
+    width: 200px;
+}
+
 
 @media (max-width: 600px){
     .wrapper{
