--- a/src/containers/Skills/summary/summary.module.css
+++ b/src/containers/Skills/summary/summary.module.css
@@ -9,12 +9,32 @@
 
 .image{
     position: relative;
+    z-index: 15;
     top: 50%;
-    margin: auto;
-    width: 180px;
+    left: 50%;
+    transform:translateX(-50%);
+    width: 270px;
     height: 240px;
     background-color: white;
     box-shadow: 0px 0px 3px 1px gray;
+    background-image: url('../../../resources/img/my_img.jpg');
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.close{
+    position: absolute;
+    box-shadow: 0px 3px 2px -1px black;
+    background-color: white;
+    margin: 0;
+    padding: 6px;
+    top: 0%;
+    right: 0%;
+    font-size: 26px;
+    font-weight: bold;
+    cursor: pointer;
 }
 
 .background{
