--- a/src/containers/Home/Home.module.css
+++ b/src/containers/Home/Home.module.css
@@ -116,6 +116,9 @@
 }
 
 @media (max-width: 850px){
+    .Home{
+        background-image: linear-gradient(45deg, rgba(0, 50, 0, 0.7), rgba(30, 0, 0, 0.5)), url('../../resources/img/home_mobile.jpg');
+    }
     .Home h2{
         margin-top: 200px;
         font-size: 40px;
