Update skills/add projects note

--- a/src/containers/Skills/summary/content/intro/Projects/projects.module.css
+++ b/src/containers/Skills/summary/content/intro/Projects/projects.module.css
@@ -18,6 +18,10 @@
     align-items: center;
 }
 
+.attention{
+    font-weight: bold !important;
+}
+
 .goForward{
     margin-left: 50px;
     padding: 0 15px;
