--- a/src/containers/Hire/Summary/ContactData/ContactData.module.css
+++ b/src/containers/Hire/Summary/ContactData/ContactData.module.css
@@ -28,10 +28,16 @@
     margin: 20px auto;
 }
 
+.Contact ul p{
+    margin: 20px auto;
+}
+
 .data{
     color: black;
     font-size: 22px;
     font-weight: bold;
+    display: block;
+    margin: 20px auto;
 }
 
 @media (max-width: 900px){
