--- a/src/components/UI/Spinner.css
+++ b/src/components/UI/Spinner.css
@@ -14,7 +14,6 @@
   position: relative;
   font-size: 11px;
   -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
   transform: translateZ(0);
   -webkit-animation-delay: -0.16s;
   animation-delay: -0.16s;
@@ -37,11 +36,13 @@
   0%,
   80%,
   100% {
-    box-shadow: 0 0;
+    -webkit-box-shadow: 0 0;
+            box-shadow: 0 0;
     height: 4em;
   }
   40% {
-    box-shadow: 0 -2em;
+    -webkit-box-shadow: 0 -2em;
+            box-shadow: 0 -2em;
     height: 5em;
   }
 }
@@ -49,11 +50,13 @@
   0%,
   80%,
   100% {
-    box-shadow: 0 0;
+    -webkit-box-shadow: 0 0;
+            box-shadow: 0 0;
     height: 4em;
   }
   40% {
-    box-shadow: 0 -2em;
+    -webkit-box-shadow: 0 -2em;
+            box-shadow: 0 -2em;
     height: 5em;
   }
 }
