--- a/src/containers/Home/Home.module.css
+++ b/src/containers/Home/Home.module.css
@@ -3,13 +3,38 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     color: white;
     min-height: 100vh;
     overflow: hidden;
+}
+
+.wrapper{
+    min-height: 70vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
 }
 
 .Home h2{
@@ -31,9 +56,15 @@
 .general{
     margin-top: 100px;
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     font-size: 22px;
     line-height: 150%;
@@ -42,12 +73,21 @@
 
 .select{
     font-size: 22px;
-    width: 25%;
+    width: 45%;
     min-height: 100px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 .stayButton{
@@ -60,18 +100,21 @@
     font-size: 18px;
     cursor: pointer;
     overflow: hidden;
+    -webkit-transition: .4s ease;
     transition: .4s ease;
 }
 
 .stayButton p{
     position: relative;
     z-index: 10;
+    -webkit-transition: .4s ease;
     transition: .4s ease;
 }
 
 .stayButton{
     background-image: linear-gradient(45deg, rgb(155, 20, 0), rgb(155, 40, 0));
-    box-shadow: 0px 0px 2px 2px rgb(155, 40, 0);
+    -webkit-box-shadow: 0px 0px 2px 2px rgb(155, 40, 0);
+            box-shadow: 0px 0px 2px 2px rgb(155, 40, 0);
 }
 
 
@@ -82,6 +125,7 @@
     width: 150%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
+    -webkit-transition: .4s ease;
     transition: .4s ease;
 }
 
@@ -90,7 +134,8 @@
 }
 
 .stayButton:hover{
-    box-shadow: 0px 0px 3px 3px white;
+    -webkit-box-shadow: 0px 0px 3px 3px white;
+            box-shadow: 0px 0px 3px 3px white;
 }
 
 
@@ -100,13 +145,19 @@
     }
 
     .paragraph{
-        width: 80%;
-        font-size: 22px;
+        margin: 20px auto;
+        width: 90%;
+        font-size: 18px;
     }
+
+    .paragraph p{
+        margin: 0;
+    }
+    
     .select{
         margin: 0 20px;
         font-size: 20px;
-        width: 45%;
+        width: 90%;
     }
 
     .stayButton{
@@ -115,30 +166,28 @@
     }
 }
 
-@media (max-width: 850px){
+@media (max-width: 600px){
     .Home{
         background-image: linear-gradient(45deg, rgba(0, 50, 0, 0.7), rgba(30, 0, 0, 0.5)), url('../../resources/img/home_mobile.jpg');
     }
     .Home h2{
-        margin-top: 200px;
-        font-size: 40px;
+        margin: 140px auto 10px auto;
+        font-size: 34px;
     }
 
-    .stayButton{
-        margin-bottom: 200px;
-    }
-}
-
-@media (max-width: 600px){
-    .select{
-        font-size: 18px;
-    }
-}
-
-@media (max-width: 550px){
     .paragraph{
-        margin: 20px auto;
+        margin: 10px auto;
+        font-size: 16px;
+    }
+
+    .paragraph p{
+        margin: 0;
+    }
+
+    .select{
+        font-size: 16px;
     }
 }
+
 
 
