--- a/src/containers/Settings/settings.module.css
+++ b/src/containers/Settings/settings.module.css
@@ -1,12 +1,20 @@
 .toggleWrapper{
-    padding: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center; 
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; 
+    -webkit-box-align: center; 
+        -ms-flex-align: center; 
+            align-items: center;
     font-size: 24px;
     width: 20%;
-    height: 150px;
+    height: 120px;
     background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -25,4 +33,10 @@
 
 .active{
     text-decoration: underline;
+}
+
+@media (max-width: 800px){
+    .toggleWrapper{
+        height: 140px;
+    }
 }
