--- a/src/containers/Skills/Skills.module.css
+++ b/src/containers/Skills/Skills.module.css
@@ -1,8 +1,17 @@
 .Skills{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     min-height: 100vh;
     background-color: lightgray;
 }
@@ -12,6 +21,12 @@
     position: relative;
     z-index: 10;
     background-color: rgb(0, 119, 181);
-    height: 170px;
+    height: 120px;
     width: 100%;
+}
+
+@media (max-width: 800px){
+    .overlay{
+        height: 140px;
+    }
 }
