--- a/src/containers/Skills/summary/content/Frontend/Frontend.module.css
+++ b/src/containers/Skills/summary/content/Frontend/Frontend.module.css
@@ -1,6 +1,7 @@
 .wrapper{
     padding-top: 150px;
-    box-shadow: 0px -24px 1px -24px black;
+    -webkit-box-shadow: 0px -24px 1px -24px black;
+            box-shadow: 0px -24px 1px -24px black;
     opacity: 0;
 }
 
@@ -14,9 +15,15 @@
 }
 
 .abilities{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     text-align: right;
     width: 100%;
 }
@@ -24,20 +31,33 @@
 .abilities ul{
     padding: 0;
     list-style-type: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .abilities ul li{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     font-size: 22px;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 250px;
     background-color: lightgray;
-    box-shadow: 4px 6px 6px 2px gray;
+    -webkit-box-shadow: 4px 6px 6px 2px gray;
+            box-shadow: 4px 6px 6px 2px gray;
     margin: 10px;
     padding: 15px;
 }
