--- a/src/containers/Skills/summary/content/Hobbies/hobbies.module.css
+++ b/src/containers/Skills/summary/content/Hobbies/hobbies.module.css
@@ -12,23 +12,37 @@
 
 
 .hobbies ul{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     list-style-type: none;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     padding: 0;
 }
 
 .hobbies ul li{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     font-size: 22px;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 250px;
     min-height: 100px;
     background-color: lightgray;
-    box-shadow: 4px 6px 6px 2px gray;
+    -webkit-box-shadow: 4px 6px 6px 2px gray;
+            box-shadow: 4px 6px 6px 2px gray;
     margin: 10px;
     padding: 15px 25px;
 }
