--- a/src/containers/Skills/summary/content/intro/Projects/projects.module.css
+++ b/src/containers/Skills/summary/content/intro/Projects/projects.module.css
@@ -12,10 +12,17 @@
 
 .buttonWrapper{
     margin: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .attention{
@@ -27,8 +34,10 @@
     padding: 0 15px;
     width: 200px;
     border-radius: 50vh;
-    box-shadow: 3px 3px 5px 2px gray;
+    -webkit-box-shadow: 3px 3px 5px 2px gray;
+            box-shadow: 3px 3px 5px 2px gray;
     cursor: pointer;
+    -webkit-transition: .4s ease;
     transition: .4s ease;
 }
 
@@ -55,12 +64,14 @@
     font-size: 18px;
     cursor: pointer;
     overflow: hidden;
+    -webkit-transition: .4s ease;
     transition: .4s ease;
 }
 
 .projectsButton p{
     position: relative;
     z-index: 10;
+    -webkit-transition: .4s ease;
     transition: .4s ease;
 }
 
@@ -75,6 +86,7 @@
     width: 150%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
+    -webkit-transition: .4s ease;
     transition: .4s ease;
 }
 
@@ -83,7 +95,8 @@
 }
 
 .projectsButton:hover{
-    box-shadow: 0px 0px 6px 3px gray;
+    -webkit-box-shadow: 0px 0px 6px 3px gray;
+            box-shadow: 0px 0px 6px 3px gray;
 }
 
 @media (max-width: 750px){
@@ -102,9 +115,15 @@
     }
 
     .projectsButton, .goForward{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        align-items: center;
-        justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         font-size: 16px;
     }
 
