--- a/src/containers/Skills/summary/summary.module.css
+++ b/src/containers/Skills/summary/summary.module.css
@@ -1,10 +1,18 @@
+/* autoprefixer grid: autoplace */
+
 .Summary{
     overflow: hidden;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: 60%;
     background-color: white;
-    box-shadow: 0px 0px 8px 2px gray;
+    -webkit-box-shadow: 0px 0px 8px 2px gray;
+            box-shadow: 0px 0px 8px 2px gray;
 }
 
 .image{
@@ -12,11 +20,13 @@
     z-index: 15;
     top: 50%;
     left: 50%;
-    transform:translateX(-50%);
+    -webkit-transform:translateX(-50%);
+            transform:translateX(-50%);
     width: 270px;
-    height: 240px;
+    height: 238px;
     background-color: white;
-    box-shadow: 0px 0px 3px 1px gray;
+    -webkit-box-shadow: 0px 0px 3px 1px gray;
+            box-shadow: 0px 0px 3px 1px gray;
     background-image: url('../../../resources/img/my_img.jpg');
     background-position: center;
     background-size: contain;
@@ -26,10 +36,14 @@
 
 .close{
     position: absolute;
-    box-shadow: 0px 3px 2px -1px black;
+    -webkit-box-shadow: 0px 3px 2px 1px lightgray;
+            box-shadow: 0px 3px 2px 1px lightgray;
+    border-radius: 3px;
     background-color: white;
+    color: black;
+    text-shadow: 0px 0px 2px black;
     margin: 0;
-    padding: 6px;
+    padding: 6px 12px 6px 12px;
     top: 0%;
     right: 0%;
     font-size: 26px;
@@ -43,7 +57,8 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    box-shadow: 6px 2px 3px 2px gray;
+    -webkit-box-shadow: 0px 0px 3px 2px gray;
+            box-shadow: 0px 0px 3px 2px gray;
 }
 
 @media (max-width: 1200px){
